--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
     <link rel="apple-touch-icon" sizes="512x512" href="/favicon/android/android-launchericon-512-512.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/ios/180.png">
     
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WRH5H4CT');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
@@ -76,6 +84,11 @@
     </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRH5H4CT"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
