--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
     })(window,document,'script','dataLayer','GTM-WRH5H4CT');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Google Analytics (GA4) - Add your GA4 Measurement ID here -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'GA_MEASUREMENT_ID');
+    </script> -->
+
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
